test/files/neg/macro-invalidusage-badargs.check
Macros_Test_2.scala:7: error: type mismatch;
 found   : "42".type (with underlying type String)
 required: Int
  val s: String = foo("42")
                      ^
one error found
